Closed Bug 1856514 Opened 2 years ago Closed 2 years ago

Focus movement between elements stops working after reload(f5).

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

Firefox 119
Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
120 Branch
Accessibility Severity s2
Tracking Status
firefox-esr115 --- verified
firefox118 --- unaffected
firefox119 + verified
firefox120 + verified

People

(Reporter: alice0775, Assigned: sefeng211)

References

(Regression)

Details

(Keywords: access, nightly-community, regression)

Attachments

(2 files)

Attached file testcase.html

[Tracking Requested - why for this release]: Navigation link with Tab key is broken

STR:

  1. Open attached html
  2. Press Tab key to focus Link 1
  3. Press F5
  4. Press and repeat Tab key</li></ol>

AR:
no longer

ER:
Able to navigate links with Tab key.

Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=23358d182f6b7e5b26398524670db017182927aa&tochange=a1735b4457aa9143244eaf2b093c72be3217ab7c

Regressed by: Bug 1830820

FWIW,
Setting dom.input_events.security.minNumTicks to 0 solves the issue.

Sean Feng,
Your patch seems to cause the regression. Could you please look into this?

Flags: needinfo?(sefeng)
See Also: → 1856497
Blocks: 1856497
See Also: 1856497

we do have some code to make sure enough ticks to happen after page load so that user input events can be handled.

However it loos like I didn't consider the case of when GetTickReason() returns None, so that mechanism is sorta broken. I'll fix this.

(smaug helped a lot for finding this)

The bug is marked as tracked for firefox119 (beta) and tracked for firefox120 (nightly). However, the bug still isn't assigned.

:hsinyi, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(htsai)
Assignee: nobody → sefeng
Status: NEW → ASSIGNED
Flags: needinfo?(sefeng)
Flags: needinfo?(htsai)
Severity: -- → S2

:sefeng we are in the last week of beta for Fx119. Will this land soon and can you add an uplift request when ready?

Flags: needinfo?(sefeng)

FYI on today's Nightly 120 and on Beta 119.0b7, the testcase works as expected: I was able to navigate between links with Tab and the focus was placed on the document/webcontent after the page refresh and pressing Tab once moved the focus to the first link, all as expected too.

But the observed by Alice behavior is an access-S2

Accessibility Severity: --- → s2

I can still reproduce this issue w/ str comment#0 on Mightly120.0a1 (20231010092329) Windows10.

(In reply to Alice0775 White from comment #7)

I can still reproduce this issue w/ str comment#0 on Mightly120.0a1 (20231010092329) Windows10.

oh, I've got the same build, but Windows 11 - maybe this is something that could help :sefeng with remediation...

You know what, I am well prepared for this! I'll just make a patch to beta to have dom.input_events.security.minNumTicks=0 to avoid creating extra hassle.

Flags: needinfo?(sefeng)
See Also: → 1858232

(In reply to Anna Yeddi [:ayeddi] from comment #8)

(In reply to Alice0775 White from comment #7)

I can still reproduce this issue w/ str comment#0 on Mightly120.0a1 (20231010092329) Windows10.

oh, I've got the same build, but Windows 11 - maybe this is something that could help :sefeng with remediation...

You may need to repeat steps 3 and 4 several times.

(In reply to Alice0775 White from comment #11)

(In reply to Anna Yeddi [:ayeddi] from comment #8)

(In reply to Alice0775 White from comment #7)

I can still reproduce this issue w/ str comment#0 on Mightly120.0a1 (20231010092329) Windows10.

oh, I've got the same build, but Windows 11 - maybe this is something that could help :sefeng with remediation...

You may need to repeat steps 3 and 4 several times.

Got it - will try! Thank you

Pushed by sefeng@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0de3239ac96f Make sure nsRefreshDriver will tick enough times for user input handling r=smaug

Setting Fx119 to Fixed, Bug 1858232 was uplifted to beta

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 120 Branch

Reproduced with Fx 120.0a1 (2023-10-02) on Windows 10.
Verified fixed with Fx 120.a01 (2023-10-12) and Fx 119.0b9 (treeherder build) on Windows 10.

Status: RESOLVED → VERIFIED

Comment on attachment 9356706 [details]
Bug 1856514 - Make sure nsRefreshDriver will tick enough times for user input handling r=smaug

Beta/Release Uplift Approval Request

  • User impact if declined: User input may not be handled if dom.input_events.security.minNumTicks is not 0
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce:
  1. Set dom.input_events.security.minNumTicks to 3
  2. Use the STR in this bug
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The change itself is trivial
  • String changes made/needed:
  • Is Android affected?: Yes
Attachment #9356706 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9356706 [details]
Bug 1856514 - Make sure nsRefreshDriver will tick enough times for user input handling r=smaug

Approved for 119.0 RC1

Attachment #9356706 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Pushed by dmeehan@mozilla.com: https://hg.mozilla.org/releases/mozilla-beta/rev/c68b55c7051a Make sure nsRefreshDriver will tick enough times for user input handling r=smaug
QA Whiteboard: [qa-triaged]
See Also: → 1858680

Verified fixed with Fx 119.0 and Fx 115.4.0esr on Windows 10.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: