Bug 1856514 - Make sure nsRefreshDriver will tick enough times for user input handling r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D190108